--- a/src/main/webapp/WEB-INF/thymeleaf/index.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/index.html
@@ -3,8 +3,8 @@
   	 <meta content="text/html;charset=UTF-8"/>
   	 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
      <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link th:href="@{bootstrap/css/bootstrap.min.css}" rel="stylesheet"/> 
-    <link th:href="@{bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
+    <link th:href="@{static/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{static/bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
   </head>
   <body>
   
@@ -17,7 +17,7 @@
     </div>
   </div>
   
-  <div th:if="${not #lists.isEmpty(people)}">
+  <!--<div th:if="${not #lists.isEmpty(people)}">
 	  <div class="panel panel-primary">
 	    <div class="panel-heading">
 	        <h3 class="panel-title">列表</h3>
@@ -27,15 +27,16 @@
 				<li class="list-group-item" th:each="person:${people}">
 				    <span th:text="${person.name}"></span>
 				   	<span th:text="${person.age}"></span>
-				   	<button class="btn" th:onclick="'getName(\'' + ${person.name} + '\');'">获得名字</button>
+                    &lt;!&ndash;这一行有问题&ndash;&gt;
+				   	<button class="btn" th:onclick="getName([[${person.name}]]);">获得名字</button>
 				</li>
 	        </ul>
 	    </div>
 	 </div>
- </div>
+ </div>-->
   
-  <script th:src="@{jquery-1.10.2.min.js}" type="text/javascript"></script><!-- 2 -->
-  <script th:src="@{bootstrap/js/bootstrap.min.js}"></script><!-- 2 -->
+  <script th:src="@{static/jquery-1.10.2.min.js}" type="text/javascript"></script><!-- 2 -->
+  <script th:src="@{static/bootstrap/js/bootstrap.min.js}"></script><!-- 2 -->
   
   <script th:inline="javascript">
   	var single = [[${singlePerson}]];
