--- a/src/main/webapp/WEB-INF/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/home.html
@@ -10,7 +10,7 @@
   
   <div class="panel panel-primary">
     <div class="panel-heading">
-        <h3 class="panel-title">访问model</h3>
+        <h3 class="panel-title">home</h3>
     </div>
     <div class="panel-body">
         	<span th:text="${singlePerson.name}"></span> 
