--- a/src/main/webapp/WEB-INF/thymeleaf/index.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/index.html
@@ -1,51 +1,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
-  <head>
-  	 <meta content="text/html;charset=UTF-8"/>
-  	 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<head>
+    <meta content="text/html;charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>首页</title>
     <link th:href="@{static/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{static/bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
-  </head>
-  <body>
-  
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-        <h3 class="panel-title">访问model</h3>
-    </div>
-    <div class="panel-body">
-        	<span th:text="${singlePerson.name}"></span> 
-    </div>
-  </div>
-  
-  <!--<div th:if="${not #lists.isEmpty(people)}">
-	  <div class="panel panel-primary">
-	    <div class="panel-heading">
-	        <h3 class="panel-title">列表</h3>
-	    </div>
-	    <div class="panel-body">
-	        <ul class="list-group">
-				<li class="list-group-item" th:each="person:${people}">
-				    <span th:text="${person.name}"></span>
-				   	<span th:text="${person.age}"></span>
-                    &lt;!&ndash;这一行有问题&ndash;&gt;
-				   	<button class="btn" th:onclick="getName([[${person.name}]]);">获得名字</button>
-				</li>
-	        </ul>
-	    </div>
-	 </div>
- </div>-->
-  
-  <script th:src="@{static/jquery-1.10.2.min.js}" type="text/javascript"></script><!-- 2 -->
-  <script th:src="@{static/bootstrap/js/bootstrap.min.js}"></script><!-- 2 -->
-  
-  <script th:inline="javascript">
-  	var single = [[${singlePerson}]];
-  	console.log(single.name+"/"+single.age)
-  	
-  	function getName(name){
-  		console.log(name);
-  	}
-  </script>
-  
-  </body>
- </html>
+</head>
+<body>
+<a href="./home">home</a>
+<a href="./login">登陆</a>
+<a href="./list">列表</a>
+</body>
+</html>
