--- a/src/main/webapp/WEB-INF/thymeleaf/list.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/list.html
@@ -3,8 +3,8 @@
     <meta content="text/html;charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link th:href="@{bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-    <link th:href="@{bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
+    <link th:href="@{static/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{static/bootstrap/css/bootstrap-theme.min.css}" rel="stylesheet"/>
 </head>
 <body>
 
@@ -35,8 +35,8 @@
     </div>
 </div>
 
-<script th:src="@{jquery-1.10.2.min.js}" type="text/javascript"></script><!-- 2 -->
-<script th:src="@{bootstrap/js/bootstrap.min.js}"></script><!-- 2 -->
+<script th:src="@{static/jquery-1.10.2.min.js}" type="text/javascript"></script><!-- 2 -->
+<script th:src="@{static/bootstrap/js/bootstrap.min.js}"></script><!-- 2 -->
 
 <script th:inline="javascript">
     var single = [[${singlePerson}]];
