--- a/src/main/webapp/WEB-INF/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/login.html
@@ -12,7 +12,7 @@
 <div th:if="${param.logout}">
     你已注销
 </div>
-<form th:action="@{/userlogin}" method="post">
+<form th:action="@{/userLogin}" method="post">
     <div><label> 账号 : <input type="text" name="username"/> </label></div>
     <div><label> 密码: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="登陆"/></div>
